@@ -3177,7 +3177,6 @@ void FileList::SetViewMode(int Mode)
 	bool OldNumLink=IsColumnDisplayed(NUMLINK_COLUMN);
 	bool OldNumStreams=IsColumnDisplayed(NUMSTREAMS_COLUMN);
 	bool OldStreamsSize=IsColumnDisplayed(STREAMSSIZE_COLUMN);
-	bool OldCustomData=IsColumnDisplayed(CUSTOM_COLUMN0);
 	bool OldDiz=IsColumnDisplayed(DIZ_COLUMN);
 	PrepareViewSettings(Mode,nullptr);
 	bool NewOwner=IsColumnDisplayed(OWNER_COLUMN);
@@ -3185,7 +3184,6 @@ void FileList::SetViewMode(int Mode)
 	bool NewNumLink=IsColumnDisplayed(NUMLINK_COLUMN);
 	bool NewNumStreams=IsColumnDisplayed(NUMSTREAMS_COLUMN);
 	bool NewStreamsSize=IsColumnDisplayed(STREAMSSIZE_COLUMN);
-	bool NewCustomData=IsColumnDisplayed(CUSTOM_COLUMN0);
 	bool NewDiz=IsColumnDisplayed(DIZ_COLUMN);
 	bool NewAccessTime=IsColumnDisplayed(ADATE_COLUMN);
 	int ResortRequired=FALSE;
@@ -3202,7 +3200,7 @@ void FileList::SetViewMode(int Mode)
 	         (!OldNumLink && NewNumLink) ||
 	         (!OldNumStreams && NewNumStreams) ||
 	         (!OldStreamsSize && NewStreamsSize) ||
-	         (!OldCustomData && NewCustomData) ||
+	         IsColumnDisplayed(CUSTOM_COLUMN0) ||
 	         (AccessTimeUpdateRequired && NewAccessTime)))
 		Update(UPDATE_KEEP_SELECTION);
 
@@ -6667,9 +6665,9 @@ void FileList::ReadFileNames(int KeepSelection, int UpdateEvenIfPanelInvisible, 
 		std::unordered_set<string> ColumnsSet;
 		const std::vector<column>* ColumnsContainers[] = { &m_ViewSettings.PanelColumns, &m_ViewSettings.StatusColumns };
 
-		FOR(const auto& Columns, ColumnsContainers)
+		for(int i=0; i<ARRAYSIZE(ColumnsContainers); i++)
 		{
-			FOR(const auto& Column, *Columns)
+			FOR(const auto& Column, *ColumnsContainers[i])
 			{
 				if ((Column.type & 0xff) == CUSTOM_COLUMN0)
 				{
@@ -6680,9 +6678,10 @@ void FileList::ReadFileNames(int KeepSelection, int UpdateEvenIfPanelInvisible, 
 		}
 
 		if (!ContentNames.empty())
+		{
 			Global->CtrlObject->Plugins->GetContentPlugins(ContentNames, ContentPlugins);
-
-		ContentValues.resize(ContentNames.size());
+			ContentValues.resize(ContentNames.size());
+		}
 	}
 
 	time_check TimeCheck(time_check::delayed, GetRedrawTimeout());
