@@ -1,4 +1,8 @@
-﻿drkns 02.09.2015 21:13:07 +0200 - build 4411
+﻿shmuel 04.09.2015 13:40:29 +0200 - build 4412
+
+1. M#3083: Контент-колонка не обновляется при переключении режимов панели
+
+drkns 02.09.2015 21:13:07 +0200 - build 4411
 
 1. 0003080: Alternate editor/viewer in FindFile results
 
